Changed font, add animation, completed nav/banner

--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 layout: default
 ---
 
-{% include nav.html %}
-
 <section class="banner">
      <div class="wrapper">
           <div class="content">
                <h1>Teaching the <img src="/assets/earth.png" alt="world"> the mysteries of code &amp; design</h1>
-               <h2><a href="https://www.youtube.com/theuniversaldev" target="_blank">Wanna learn code and design? Check out my YouTube Channel <span class="icon"><i class="fa fa-arrow-right"></i></span></a></h2>
+               <h2><a href="https://www.youtube.com/theuniversaldev" target="_blank">What is "The Universal Dev" and what is this site? <span class="icon"><i class="fa fa-arrow-right"></i></span></a></h2>
           </div>
      </div>
-</div>
+</section>
