--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <section class="banner">
      <div class="wrapper">
           <div class="content">
-               <h1>Teaching the <img src="/assets/earth.png" alt="world"> the mysteries of code &amp; design</h1>
+               <h1>Teaching the <img src="/assets/earth.png" alt="world"> code &amp; design</h1>
                <h2><a href="https://www.youtube.com/theuniversaldev" target="_blank">What is "The Universal Dev" and what is this site? <span class="icon"><i class="fa fa-arrow-right"></i></span></a></h2>
           </div>
      </div>
