--- a/index.html
+++ b/index.html
@@ -48,3 +48,13 @@ layout: default
           <a href="https://www.github.com/theuniversaldev" target="_blank" class="link github"><i class="fa fa-github link"></i> <p>GitHub</p></a>
      </div>
 </section>
+
+<section class="banner">
+     <div class="wrapper">
+          <div class="content">
+               <h1>This is a project crafted and maintained by <img src="/assets/earth.png" alt="Brehanu"></h1>
+               <h2><a href="#">I am a designer, developer, and illustrator that shares my knowledge with the world on this blog and YouTube <span class="icon"><i class="fa fa-hand-peace-o"></i></span></a></h2>
+               <h4>&copy; 2017 Brehanu. All rights reserved.</h4>
+          </div>
+     </div>
+</section>
