Added and Linked Illustrations

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 <section class="banner">
      <div class="wrapper">
           <div class="content">
-               <h1>My <img src="/assets/earth.png" alt="YouTube"> videos are excellent</h1>
+               <h1>My <img src="/assets/yt.png" alt="YouTube"> videos are excellent</h1>
                <h2><a href="https://www.youtube.com/theuniversaldev" target="_blank">Legit. I have 40,000+ subscribers. Go check it out. <span class="icon"><i class="fa fa-arrow-right"></i></span></a></h2>
           </div>
      </div>
