--- a/design.html
+++ b/design.html
@@ -5,7 +5,7 @@ layout: default
 <section class="banner">
      <div class="wrapper">
           <div class="content">
-               <h1>All the <img src="/assets/earth.png" alt="design"> assets. Ever.</h1>
+               <h1>All the <img src="/assets/design.png" alt="design"> (design) assets. Ever.</h1>
                <h2><a href="https://www.youtube.com/theuniversaldev" target="_blank">By the way, what is design actually? Watch my video to learn <span><i class="fa fa-arrow-right"></i></span></a></h2>
           </div>
      </div>
