--- a/code.html
+++ b/code.html
@@ -5,7 +5,7 @@ layout: default
 <section class="banner">
      <div class="wrapper">
           <div class="content">
-               <h1>Would you like champange? <img src="/assets/code.png" alt="code"> Code please...</h1>
+               <h1>Would you like champange? <img src="/assets/code.png" alt=""> Code please...</h1>
                <h2><a href="https://www.youtube.com/theuniversaldev" target="_blank">By the way, what is code actually? Watch my video to learn <span><i class="fa fa-arrow-right"></i></span></a></h2>
           </div>
      </div>
