--- a/videos.html
+++ b/videos.html
@@ -5,7 +5,7 @@ layout: default
 <section class="banner">
      <div class="wrapper">
           <div class="content">
-               <h1>I <img src="/assets/videos.png" alt="bing"> (binge) on all my twinkies</h1>
+               <h1>I <img src="/assets/videos.png" alt=""> (binge) on all my twinkies</h1>
                <h2><a href="https://www.youtube.com/theuniversaldev" target="_blank">By the way, have you even seen my channel? <span><i class="fa fa-arrow-right"></i></span></a></h2>
           </div>
      </div>
