--- a/404.html
+++ b/404.html
@@ -6,17 +6,8 @@ permalink: "/404"
 <section class="banner">
      <div class="wrapper">
           <div class="content">
-               <h1>404: Page Not Found</h1>
+               <h1>404: <img src="/assets/404.png" class="notfound"> Page Not Found</h1>
                <h2><a href="#">By the way, do you want to learn about 404 Redirects? <span class="icon"><i class="fa fa-arrow-right"></i></span></a></h2>
-          </div>
-     </div>
-</section>
-
-<section class="banner">
-     <div class="wrapper">
-          <div class="content">
-               <h1>Teaching the <img src="/assets/earth.png" alt="world"> code &amp; design</h1>
-               <h2><a href="https://www.youtube.com/theuniversaldev" target="_blank">What is "The Universal Dev" and what is this site? <span class="icon"><i class="fa fa-arrow-right"></i></span></a></h2>
           </div>
      </div>
 </section>
